# ossim

./: .gitignore  .gitignore_BACKUP_12908  .gitignore_BASE_12908  .gitignore_REMOTE_12908  CMakeLists.txt  readme.txt
csmApi/: CMakeLists.txt
csmApi/include/: CSMSensorModelLoader.h
libwms/: CMakeLists.txt
libwms/xcode/libwms/English.lproj/: InfoPlist.strings
omar/apps/omar/grails-app/conf/: Config.groovy  DataSource.groovy
omar/plugins/omar-image-magick/web-app/js/: jsColor.js
omar/plugins/omar-ogc/: omar-ogc.ipr  omar-ogc.iws
omar/plugins/omar-scheduler/grails-app/conf/: QuartzConfig.groovy
omar/support/: encodePassword.sh
omar/support/ped/: SA_postgres_readme.txt
omar/support/ped/crontab/: SA_crontab.txt
oms/coms/src/oms/: DataInfo.cpp  ImageModel.cpp  Util.cpp
oms/joms/: build.xml
oms/joms/swig/: oms.i
ossim/: CMakeLists.txt  nmake.opt
ossim/etc/templates/: ossim_preferences_template
ossim/include/ossim/: ossimConfig.h  ossimVersion.h
ossim/include/ossim/base/: ossimGzStream.h  ossimXmlDocument.h
ossim/include/ossim/imaging/: ossimHistogramRemapper.h  ossimImageHandler.h  ossimImageHandlerRegistry.h  ossimScaleFilter.h
ossim/include/ossim/kbool/: graph.h  graphlst.h  lpoint.h
ossim/include/ossim/plugin/: ossimSharedPluginRegistry.h.bak
ossim/include/ossim/support_data/: ossimInfoFactoryRegistry.h  ossimNitfRpfTagFactory.h
ossim/include/ossim/util/: ossimInfo.h
ossim/src/apps/ossim-icp/: ossim-icp.cpp
ossim/src/apps/ossim-img2rr/: ossim-img2rr.cpp
ossim/src/apps/ossim-preproc/: ossim-preproc.cpp
ossim/src/ossim/base/: ossimAdjustmentExecutive.cpp  ossimConnectableContainer.cpp  ossimConnectableObject.cpp  ossimGzStream.cpp  ossimStreamFactory.cpp  ossimXmlDocument.cpp  ossimXmlString.cpp
ossim/src/ossim/imaging/: ossimGeneralRasterInfo.cpp  ossimGeneralRasterTileSource.cpp  ossimGeneralRasterWriter.cpp  ossimHistogramMatchFilter.cpp  ossimHistogramRemapper.cpp  ossimImageChain.cpp  ossimImageData.cpp  ossimImageHandler.cpp  ossimImageHandlerRegistry.cpp  ossimImageMetaData.cpp  ossimOverviewBuilderBase.cpp  ossimScaleFilter.cpp  ossimTableRemapper.cpp  ossimTiffTileSource.cpp
ossim/src/ossim/parallel/: ossimOrthoIgen.cpp
ossim/src/ossim/plugin/: ossimSharedPluginRegistry.cpp.bak
ossim/src/ossim/projection/: ossimEpsgProjectionDatabase.cpp  ossimProjection.cpp  ossimSensorModelTuple.cpp
ossim/src/ossim/support_data/: ossimGeoTiff.cpp  ossimNitfRpfTagFactory.cpp
ossim/src/ossim/util/: ossimElevUtil.cpp  ossimImageUtil.cpp  ossimInfo.cpp
ossim/src/test/: CMakeLists.txt  ossim-image-elevation-test.cpp  ossim-tiled-elevation-test.cpp
ossimGui/: CMakeLists.txt
ossimGui/apps/ossim-geocell/: ossim-geocell.cpp
ossimGui/include/ossimGui/: AdjustableParameterEditor.h  DataManager.h  DataManagerWidget.h  GlWidget.h  ImageMdiSubWindow.h  ImageWidget.h  MainWindow.h  MdiSubWindowBase.h
ossimGui/src/ossimGui/: AdjustableParameterEditor.cpp  DataManager.cpp  DataManagerPropertyView.cpp  DataManagerWidget.cpp  ExportImageDialog.cpp  HistogramWidget.cpp  ImageMdiSubWindow.cpp  ImageWidget.cpp  MainWindow.cpp  PlanetMdiSubWindow.cpp
ossimGui/src/ossimGui/ui/: AdjustableParameterEditor.ui
ossimPlanet/: CMakeLists.txt
ossimPlanet/include/ossimPlanet/: mkUtils.h  ossimPlanetKml.h  ossimPlanetManipulator.h  ossimPlanetNavigator.h
ossimPlanet/src/ossimPlanet/: mkUtils.cpp  ossimPlanetAnimationPath.cpp  ossimPlanetDtedElevationDatabase.cpp  ossimPlanetInteractionController.cpp  ossimPlanetSrtmElevationDatabase.cpp  ossimPlanetTerrain.cpp  ossimPlanetViewer.cpp
ossimPlanet/xcode/ossimPlanet/English.lproj/: InfoPlist.strings
ossimPlanetQt/: CMakeLists.txt
ossimPlanetQt/apps/: CMakeLists.txt
ossimPlanetQt/include/ossimPlanetQt/: ossimPlanetQtGlWidget.h  ossimPlanetQtMainWindow.h  ui_ossimPlanetQtAboutDialog.h  ui_ossimPlanetQtActivityWindow.h  ui_ossimPlanetQtLayerOperation.h  ui_ossimPlanetQtMainWindow.h  ui_ossimPlanetQtMessageLog.h  ui_ossimPlanetQtNewHttpConnection.h  ui_ossimPlanetQtPreferences.h  ui_ossimPlanetQtRuler.h  ui_ossimPlanetQtVideoControlWidget.h  ui_ossimPlanetQtWmsDialog.h
ossimPlanetQt/src/gui/: ossimPlanetQtMainWindow.cpp
ossimPlanetQt/src/gui/ui/: ossimPlanetQtWmsDialog.ui
ossimPlanetQt/xcode/ossimPlanetQt/English.lproj/: InfoPlist.strings
ossimPlanetQt/xcode/ossimPlanetQt/icons/: ImageLinker.icns
ossimPredator/: CMakeLists.txt
ossim_package_support/cmake/CMakeModules/: FindTIFF.cmake  FindZLIB.cmake  OssimCommonVariables.cmake  OssimUtilities.cmake  OssimVersion.cmake
ossim_package_support/cmake/build_scripts/windows/: ossim-cmake-config.bat
ossim_plugins/: CMakeLists.txt
ossim_plugins/gdal/: CMakeLists.txt  ossimGdalFactory.cpp  ossimGdalPluginInit.cpp  ossimGdalProjectionFactory.cpp  ossimGdalTileSource.cpp  ossimGdalTileSource.h  ossimGdalType.cpp  ossimGdalWriter.cpp  ossimOgcWktTranslator.cpp
ossim_plugins/hdf/: CMakeLists.txt
ossim_plugins/kakadu/: ossimKakaduNitfReader.cpp
ossim_plugins/mrsid/: ossimMrSidReader.cpp
ossim_plugins/ossim/: ossimPleiadesModel.cpp  ossimRadarSat2RPCModel.h
ossim_plugins/png/: CMakeLists.txt  ossimPngReader.cpp  ossimPngReader.h  ossimPngWriter.cpp  ossimPngWriter.h
ossim_qt/xcode/ossim_qt/English.lproj/: InfoPlist.strings
ossim_qt4/: CMakeLists.txt
ossim_qt4/apps/iview/: UpgradeLog.XML  iview.vcxproj  iview.vcxproj.filters
ossim_qt4/src/: ossimQtPositionQualityDialog.cpp
ossimjni/cpp/src/ossimjni/: KeywordlistIterator.cpp
ossimjni/java/: local.properties.template
swigossim/imageio/org/ossim/imageio/: OssimImageReader.java
swigossim/src/apps/: ossimRenderedImage2.java
vsproj/: ALL_BUILD.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ossim_all.sln
vsproj/ossim/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  ossimcore.sln  ossimcore.vcxproj  ossimcore.vcxproj.filters
vsproj/ossim_plugins/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ossimplugins.sln
vsproj/ossim_plugins/gdal/: cmake_install.cmake  ossimgdal_plugin.vcxproj  ossimgdal_plugin.vcxproj.filters
(+24 files in other folders)
