PROJECT(wms)

SET(CMAKE_DEBUG_POSTFIX "d")

INCLUDE_DIRECTORIES(${${PROJECT_NAME}_SOURCE_DIR}/include
                    ${CURL_INCLUDE_DIR}
                    ${EXPAT_INC})


link_directories(${CURL_LINK_DIR}                 
                 ${EXPAT_LINK_DIR})



FILE(GLOB WMS_SRCS RELATIVE_PATH ${CMAKE_CURRENT_SOURCE_DIR} "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

FILE(GLOB WMS_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/wms/*.h")


SET (LIB_NAME wms)
SET (LIB_TYPE SHARED)


ADD_DEFINITIONS(-D_AFXEXT)
ADD_DEFINITIONS(-D_AFXDLL)
ADD_DEFINITIONS(-DWMS_LIBRARY)
SET (CMAKE_MFC_FLAG 0)


ADD_LIBRARY(${LIB_NAME} ${LIB_TYPE}  ${WMS_HEADERS}  ${WMS_SRCS} )


set_target_properties(${LIB_NAME} PROPERTIES COMPILE_FLAGS "/MP" )


TARGET_LINK_LIBRARIES(${LIB_NAME} debug libcurl_debug optimized libcurl  ${EXPAT_LIBRARIES})
set_target_properties (${LIB_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY  ${OUTPUT_BINDIR})
set_target_properties (${LIB_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG  ${OUTPUT_BINDIR})
set_target_properties (${LIB_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE   ${OUTPUT_BINDIR})
set_target_properties (${LIB_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY  ${OUTPUT_BINDIR})
set_target_properties (${LIB_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG  ${OUTPUT_BINDIR})
set_target_properties (${LIB_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE   ${OUTPUT_BINDIR})
